syntax = "proto3";

package expenses.v1;

option go_package = "github.com/atreya2011/expense-manager/internal/rpc/gen/expenses/v1;expensesv1";

import "expenses/v1/common.proto";
import "google/protobuf/timestamp.proto";

// User represents a user of the expense manager system
message User {
  string                    id         = 1;
  string                    name       = 2;
  string                    email      = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// CreateUserRequest represents a request to create a user
message CreateUserRequest {
  string name  = 1;
  string email = 2;
}

// CreateUserResponse represents the response to a create user request
message CreateUserResponse {
  User user = 1;
}

// GetUserRequest represents a request to get a user by ID
message GetUserRequest {
  string id = 1;
}

// GetUserResponse represents the response to a get user request
message GetUserResponse {
  User user = 1;
}

// ListUsersRequest represents a request to list users with optional pagination
message ListUsersRequest {
  Pagination pagination = 1;
}

// ListUsersResponse represents the response to a list users request
message ListUsersResponse {
  repeated User      users               = 1;
  PaginationResponse pagination_response = 2;
}

// UpdateUserRequest represents a request to update a user
message UpdateUserRequest {
  string id    = 1;
  string name  = 2;
  string email = 3;
}

// UpdateUserResponse represents the response to an update user request
message UpdateUserResponse {
  User user = 1;
}

// DeleteUserRequest represents a request to delete a user by ID
message DeleteUserRequest {
  string id = 1;
}

// DeleteUserResponse represents the response to a delete user request
message DeleteUserResponse {
  bool success = 1;
}

// UserService provides CRUD operations for users
service UserService {
  // CreateUser creates a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}

  // GetUser retrieves a user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}

  // ListUsers retrieves a list of users with optional pagination
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}

  // UpdateUser updates an existing user
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}

  // DeleteUser deletes a user by ID
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}
